--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
-<h1>Welcome to Clementine!  This will be the dashboard.</h1>
+<h1> Welcome to Clementine! </h1>  
+<h3>Hi there, <%= current_user.email %>! This will be the dashboard.</h3>
 
 <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
