--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
   </head>
 
   <body>
+    <% if current_user %>
+      <%= auto_session_timeout_js %>
+    <% end %>
+    
     <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
     <% end %>
