--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,59 +1,50 @@
-<h2>Sign up</h2>
+<h2 class="devise-header"> - Create New Account - </h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, :html => {:class => "devise-form"}, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder: "First Name" %>
   </div>
 
   <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder: "Last Name" %>
   </div>
 
    <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city, autofocus: true, autocomplete: "city" %>
+    <%= f.text_field :city, autofocus: true, autocomplete: "city", placeholder: "City" %><br></br>
   </div>
 
    <div class="field">
-    <%= f.label :state %><br />
     <%= f.select :state, options_for_select(us_states),{}, class: 'form-control'%>
   </div>
 
   <div class="field">
-    <%= f.label :postal_code %><br />
-    <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
+    <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code", placeholder: "Postal Code" %><br></br>
   </div>
 
   <div class="field">
-    <%= f.label :country %><br />
     <%= f.country_select :country, priority_countries: ["US", "CA"], autofocus: true %>
   </div><br />
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email" %>
+  </div><br />
 
   <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password (#{@minimum_password_length} characters minimum)" %>
+  </div><br/>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password Confirmation" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", :class => "devise-button" %>
+  </div>
+  <div class="links">
+    <%= render "devise/shared/links" %><br />
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
