dashboard styling - first round

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <% if current_user %>
       <%= auto_session_timeout_js %>
     <% end %>
-      <div class="container">
+      <div>
       <% if notice %>
         <p class="alert alert-success"><%= notice %></p>
       <% end %>
