--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,13 @@
-<%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+<nav class="nav">
+  <span class="title">Bal Week Registration Dashboard  |   Welcome, <%=current_user.first_name%>!</span>
+  <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+</nav>  
 
-<%= react_component 'App', name: current_user.full_name %>
+<div class="container">
+  <%= react_component 'App', name: current_user.full_name %>
+</div>
+
+<div class="footer">
+  <p>Made with ♥️ for Bal Week by Chad Mills and Lindsey Wells </p>
+</div>
 
