--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,12 @@
 </nav>  
 
 <div class="container">
+  <% if notice %>
+        <p class="alert alert-success"><%= notice %></p>
+      <% end %>
+      <% if alert %>
+        <p class="alert alert-danger"><%= alert %></p>
+      <% end %>
   <%= react_component 'App', name: current_user.full_name %>
 </div>
 
