--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -1,20 +1,21 @@
 nav {
   width: 100%; 
-  height: 30px; 
-  background-color: black;
-  padding: 10px;
+  height: 35px; 
+  background-color: white; 
+  padding: 15px 10px 5px 10px;
   margin-bottom: 20px;
   font-family: 'Josefin Sans', sans-serif;
+  box-shadow: 0 1px 8px #b7b7b7;
 }
   nav a:link {
-    color: white;
+    color: rgb(66, 51, 57);
     float: right;
     margin-right: 40px;
     text-decoration: none;
     font-size: 1.3em;
  }
  nav a:visited {
-    color: white;
+    color: rgb(66, 51, 57);
     text-decoration: none;
  }
   nav a:hover {
@@ -22,11 +23,12 @@ nav {
 }  
 
 .title {
-  color: white;
-  margin-left: 15px;
+  color: rgb(66, 51, 57);
+  margin-left: 30px;
   top: 20px;
-  font-size: 1.4em;
+  font-size: 1.5em;
   vertical-align: center;
+  overflow-wrap: break-word;
 
 }  
 
