--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -1,16 +1,17 @@
 nav {
   width: 100%; 
-  height: 35px; 
+  height: 30px; 
   background-color: white; 
-  padding: 15px 10px 5px 10px;
+  padding: 20px 40px 20px 40px;
   margin-bottom: 20px;
   font-family: 'Josefin Sans', sans-serif;
   box-shadow: 0 1px 8px #b7b7b7;
+  overflow-wrap: break-word;
 }
   nav a:link {
     color: rgb(66, 51, 57);
     float: right;
-    margin-right: 40px;
+    margin-right: 70px;
     text-decoration: none;
     font-size: 1.4em;
  }
@@ -24,7 +25,6 @@ nav {
 
 .title {
   color: rgb(66, 51, 57);
-  margin-left: 30px;
   top: 20px;
   font-size: 1.6em;
   vertical-align: center;
@@ -35,3 +35,11 @@ nav {
 .title-small {
   color:white;
 }
+
+@media (max-width: 600px) {
+    nav {
+      padding: 20px 40px 20px 10px;
+    }
+}
+
+
