provide user info to Stripe

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -65,6 +65,7 @@
 .transaction-complete-text {
   font-family: 'Josefin Sans', sans-serif;
   font-size: 1.5em;
+  margin-bottom: 10px;
 }
 
 .return-home-button {
