--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,6 @@
 </nav>  
 
 <div class="container">
-  <%= react_component 'App', name: current_user.full_name %>
+  <%= react_component 'App' %>
 </div>
 
