add timer component

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -1,3 +1,9 @@
+.timer {
+  font-style: italic;
+  margin-bottom: 20px;
+  color: rgb(153,206,167); 
+}
+
 .category-header {
   background-color: rgb(153,206,167); 
   font-size: 1.2em;
