--- a/app/assets/stylesheets/devise.css
+++ b/app/assets/stylesheets/devise.css
@@ -29,8 +29,8 @@ input[type='submit'].devise-button {
   margin: 10px;
 }
 
-input[type='submit']:hover .devise-button {
-  background-color: rgb(133,208,164);
+form input[type=submit].devise-button:not(.disabled):hover {
+  background-color: rgb(113,188,144);
   background-image: none;
 }
 
