store timeout in rails config, pass to react as props

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,6 @@
 </nav>  
 
 <div class="container">
-  <%= react_component 'App' %>
+  <%= react_component 'App', timeout: Rails.configuration.timeout.parts[:minutes]%>
 </div>
 
