--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -21,10 +21,16 @@
   margin-bottom: 20px
 }
 
+.item-description{
+  max-width: 400px;
+  text-overflow: wrap;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 .flex-container {
   display: flex;
   flex-flow: row wrap;
-  align-items: stretch;
 }
 
 .flex-item {
