--- a/app/assets/stylesheets/item_row.css
+++ b/app/assets/stylesheets/item_row.css
@@ -26,5 +26,11 @@
 }
 
 .item-row {
-    font-size: 1.1em;
+    font-size: 1em;
+}
+
+.item-type-row {
+    padding: 0;
+    margin: 0;
+    vertical-align: top;
 }
