--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2 class="devise-header"> - Create New Account - </h2>
+<h2 class="devise-header">  Bal Week <br /> - New Account - </h2>
 
 <%= form_for(resource, as: resource_name, :html => {:class => "devise-form"}, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
