--- a/app/assets/stylesheets/devise.css
+++ b/app/assets/stylesheets/devise.css
@@ -34,6 +34,25 @@ form input[type=submit].devise-button:not(.disabled):hover {
   background-image: none;
 }
 
+a.devise-button-link:link, .devise-button-link:visited {
+  text-decoration: none;
+  padding: 5px 12px 5px 12px;
+  background-color: rgb(214,137,66);
+  border: 1px solid rgb(214,137,66);
+  border-radius: 35px;
+  color:white;
+  text-shadow: .5px .5px .5px rgba(0,0,0,.9);
+}
+
+a.devise-button-link:hover {
+  padding: 5px 12px 5px 12px;
+  background-color: rgb(194,117,46);
+  border: 1px solid rgb(194,117,46);
+  border-radius: 35px;
+  color: white;
+  text-decoration: none;
+}
+
 input[type='text']{
   margin-left: auto;
   margin-right: auto;
