--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,6 +3,10 @@
 <%= form_for(resource, as: resource_name, :html => {:class => "devise-form"}, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
+  <div class="info">
+    (If you do not receive a confirmation email after signing up, check your spam folder.)
+  </div><br />
+
   <div class="field">
     <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder: "First Name" %>
   </div>
@@ -42,6 +46,7 @@
   <div class="actions">
     <%= f.submit "Sign up", :class => "devise-button" %>
   </div>
+
   <div class="links">
     <%= render "devise/shared/links" %><br />
   </div>
